# bevy_scene_editor

./: .gitignore  Cargo.toml  README.md
assets/examples/scenes/: scene.jsn
assets/jan/: jan.gltf
crates/bevy_jsn/: Cargo.toml
crates/bevy_jsn/src/: format.rs  lib.rs  loader.rs  mesh_rebuild.rs  types.rs
crates/bevy_jsn_geometry/: Cargo.toml
crates/bevy_scene_editor/: Cargo.toml
crates/bevy_scene_editor/src/: hierarchy.rs  inspector.rs  inspector_widgets.rs  layout.rs  lib.rs  main.rs  plugin.rs  state.rs  systems.rs  viewport.rs
crates/bevy_split_panel/: Cargo.toml
crates/bevy_split_panel/src/: feathers.rs  headless.rs  lib.rs
crates/bevy_text_input/: Cargo.toml
crates/bevy_text_input/examples/: basic.rs
crates/bevy_text_input/src/: feathers.rs  headless.rs  lib.rs  prelude.rs
crates/bevy_tree_view/: Cargo.toml
crates/bevy_tree_view/src/: feathers.rs  headless.rs  lib.rs
crates/editor_feathers/: Cargo.toml
crates/editor_feathers/examples/: split_panels.rs  text_input.rs
crates/editor_feathers/src/: button.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  file_browser.rs  icons.rs  inspector_field.rs  lib.rs  list_view.rs  menu_bar.rs  numeric_input.rs  panel_header.rs  panel_section.rs  scroll.rs  separator.rs  split_panel.rs  status_bar.rs  text_edit.rs  text_input.rs  toast.rs  tokens.rs  tree_view.rs  utils.rs
crates/editor_feathers/src/color_picker/: input_fields.rs  materials.rs  mod.rs
crates/editor_feathers/src/color_picker/shaders/: color_picker_alpha.wgsl  common.wgsl
crates/editor_widgets/: Cargo.toml
crates/editor_widgets/src/: context_menu.rs  lib.rs  menu_bar.rs  numeric_input.rs  split_panel.rs  tree_view.rs
crates/jackdaw_camera/: Cargo.toml
crates/jackdaw_camera/src/: lib.rs
crates/jackdaw_commands/: Cargo.toml
crates/jackdaw_commands/src/: lib.rs
crates/jackdaw_feathers/: Cargo.toml
crates/jackdaw_feathers/examples/: split_panels.rs  text_input.rs
crates/jackdaw_feathers/src/: alert.rs  collapsible.rs  combobox.rs  context_menu.rs  cursor.rs  file_browser.rs  lib.rs  list_view.rs  menu_bar.rs  numeric_input.rs  popover.rs  split_panel.rs  text_input.rs  tokens.rs  tree_view.rs  variant_edit.rs  vector_edit.rs
crates/jackdaw_feathers/src/color_picker/: color_math.rs  controls.rs  materials.rs  setup.rs  visuals.rs
crates/jackdaw_feathers/src/color_picker/shaders/: color_picker_checkerboard.wgsl  color_picker_hsv_rect.wgsl  color_picker_hue.wgsl
crates/jackdaw_geometry/: Cargo.toml
crates/jackdaw_geometry/src/: lib.rs
crates/jackdaw_jsn/: Cargo.toml
crates/jackdaw_jsn/src/: format.rs  lib.rs  loader.rs  mesh_rebuild.rs  types.rs
crates/jackdaw_widgets/: Cargo.toml
crates/jackdaw_widgets/src/: collapsible.rs  file_browser.rs  lib.rs  list_view.rs  text_input.rs  tree_view.rs
examples/: basic.rs  custom_components.rs  jsn_load.rs  minimal.rs  navmesh_server.rs
src/: alignment_guides.rs  asset_browser.rs  brush.rs  commands.rs  custom_properties.rs  draw_brush.rs  entity_ops.rs  entity_templates.rs  face_grid.rs  gizmos.rs  hierarchy.rs  inspector.rs  layout.rs  lib.rs  modal_transform.rs  scene_io.rs  selection.rs  snapping.rs  status_bar.rs  texture_browser.rs  view_modes.rs  viewport.rs  viewport_overlays.rs  viewport_select.rs  viewport_util.rs
src/brush/: csg.rs  geometry.rs  gizmo_overlay.rs  hull.rs  interaction.rs  mesh.rs  mod.rs
src/inspector/: brush_display.rs  component_display.rs  component_picker.rs  custom_props_display.rs  material_display.rs  mod.rs  reflect_fields.rs
src/navmesh/: brp_client.rs  build.rs  mod.rs  save_load.rs  toolbar.rs  visualization.rs
