[package]
name = "bevy_scene_editor"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
bevy.workspace = true
bevy_notify.workspace = true
bevy_panorbit_camera.workspace = true
bevy_infinite_grid.workspace = true
editor_feathers.workspace = true
editor_widgets.workspace = true
serde.workspace = true
serde_json.workspace = true
avian3d.workspace = true

[workspace.dependencies]
bevy = { version = "0.18", features = ["experimental_bevy_feathers", "serialize", "debug"] }
bevy_notify = { git = "https://github.com/Freyja-moth/bevy_notify" }
bevy_panorbit_camera = "0.34"
bevy_infinite_grid = "0.18"
editor_feathers = { path = "crates/editor_feathers" }
editor_widgets = { path = "crates/editor_widgets" }
serde = "1"
lucide-icons = "0.563"
serde_json = "1"
bevy_ui_text_input = "0.7"
bevy_easings = "0.18.0"
avian3d = { version = "0.5", default-features = false, features = ["3d", "parry-f32"] }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lints]
workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
