[package]
name = "jackdaw"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
bevy.workspace = true
jackdaw_jsn.workspace = true
jackdaw_geometry.workspace = true
bevy_notify.workspace = true
bevy_infinite_grid.workspace = true
jackdaw_camera.workspace = true
jackdaw_feathers.workspace = true
jackdaw_widgets.workspace = true
jackdaw_commands.workspace = true
serde.workspace = true
serde_json.workspace = true
avian3d.workspace = true
rfd.workspace = true

[workspace.dependencies]
bevy = { version = "0.18", features = ["experimental_bevy_feathers", "serialize", "debug"] }
jackdaw_jsn = { path = "crates/jackdaw_jsn" }
jackdaw_geometry = { path = "crates/jackdaw_geometry" }
bevy_notify = { git = "https://github.com/Freyja-moth/bevy_notify" }
bevy_infinite_grid = "0.18"
jackdaw_camera = { path = "crates/jackdaw_camera" }
jackdaw_feathers = { path = "crates/jackdaw_feathers" }
jackdaw_widgets = { path = "crates/jackdaw_widgets" }
jackdaw_commands = { path = "crates/jackdaw_commands" }
serde = "1"
lucide-icons = "0.563"
serde_json = "1"
bevy_ui_text_input = "0.7"
bevy_easings = "0.18.0"
avian3d = { version = "0.5", default-features = false, features = ["3d", "parry-f32"] }
rfd = "0.15"

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lints]
workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"
